[project]
name = "langgraph-kg"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.3.34,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "pymupdf4llm (>=0.0.21,<0.0.22)",
    "numpy (>=2.2.5,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "transformers (==4.40.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "grandalf (>=0.8,<0.9)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "chromadb (>=1.0.12,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
